smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/isa-cannot-be-quoted.smithy
// Parse error at line 8, column 15 near `isa`: Expected LBRACE(
namespace smithy.example

structure Foo {
  baz: String
}

structure Baz "isa" Foo {
  bar: String,
}
